--- a/TributePage/Tributepage.html
+++ b/TributePage/Tributepage.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en>
 
+<head>
+    <meta charset=" UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
+    <title>Tributepage</title>
+    <link rel="stylesheet" href="Tributepage.css" />
+</head>
+
+<body>
+    <main id="main">
+        <h1 id="title">Dr. Abed Chowdhury</h1>
+        <h2>A Pioneer in Genetic Science, "From Village Roots to Global Innovations".</h2>
+        
+        <div id="img-div">
+            <img id="image" src="https://media.licdn.com/dms/image/C5622AQHDDOPud4G0Gw/feedshare-shrink_480/0/1623020444288?e=1723680000&v=beta&t=sskwGqNEIR3Oj-KHczla7o5FjsLEyKzbIsvY7IX4hwg" alt="image of Dr. Abed">
+            <h4 id="img-caption">Dr. Abed Chowdhury stands infront of a paddy field.</h4>
+        </div>
+
+        <div id="tribute-info">
+            <div class="key-info">Key info:</div>
+            <ul>
+                <li><strong>Early Life and Education: </strong> Born in 1956 in Moulvibazar, Bangladesh, Abed Chowdhury excelled academically, earning degrees from Dhaka University and the Oregon State Institute of Molecular Biology.</li>
+                <li><strong>Groundbreaking Research: </strong> Discovered the "RecD" gene and pioneered apomixis, enabling seed production without fertilization.</li>
+                <li><strong>Innovations in Agriculture:</strong> Developed high-yield rice varieties and colorful, nutrient-rich corn, enhancing food security and nutrition.</li>
+                <li><strong>Literary Contributions: </strong> Authored numerous scientific articles, non-fiction books, and poetry in both Bengali and English.</li>
+            </ul>
+        </div>
+
+        <div>
+            <h3>Read more about Dr. Abed Cowdhury <a id="tribute-link" href="https://bengalbyte.in/byte/biography-of-scientist-abed-chaudhury-in-bengali-6mnzz24w" target="_blank">here</a></h3>
+        </div>
+    </main>
+</body>
