--- a/TributePage/Tributepage.html
+++ b/TributePage/Tributepage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
     <title>Tributepage</title>
-    <link rel="stylesheet" href="Tributepage.css" />
+    <link rel="stylesheet" href="TributePage.css" />
 </head>
 
 <body>
