--- a/Product_landing_page/Product_landing_page.html
+++ b/Product_landing_page/Product_landing_page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://api.assistivecards.com/cards/fruits/mango@2x.png">
     <title>Raj Mangoes</title>
-    <link rel="stylesheet" href="Product_page.css">
+    <link rel="stylesheet" href="Product_landing_page.css">
 
 </head>
 
