--- a/Portfolio_project/Portfolio.html
+++ b/Portfolio_project/Portfolio.html
@@ -1,1 +1,123 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" sizes="114x114" href="https://i.ibb.co/6BzFwWp/image-1.png">
+  <title>Arshad</title>
+  <link rel="stylesheet" href="Portfolio.css">
+
+</head>
+
+<body>
+
+  <header id="header">
+    <nav id="navbar">
+      <ul class="horizontal-bar">
+        <li><a class="nav-link" href="#about"><img class="logo" id="header-img"
+                            src="https://i.ibb.co/ysWB1VW/logoproject.png" alt="mango"></a></li>
+        <li><a class="nav-link" href="#about">About</a></li>
+        <li><a class="nav-link" href="#pro-jects">Projects</a></li>
+        <li><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+  <div class="cover-img" id="welcome-section">
+    <div class="cover-text">
+      <h1>Hi!, I'm Arshad.</h1>
+    </div>
+
+    <section id="section-1">
+      <a id="scroll-btn" href="#about"></a>
+    </section>
+  </div>
+
+  <div id="about" class="separator">About</div>
+
+  <main>
+
+    <div class="about-segment">
+      <div class="profile-image">
+        <img src="https://i.ibb.co/Kr8Q6qC/307ce493-b254-4b2d-8ba4-d12c080d6651.jpg" alt="profile-pic">
+      </div>
+      <div class="about-text">
+        Md. Arshadul Islam is currently pursuing a Bachelor's degree in Urban & Regional Planning (BURP) at
+        Rajshahi University of Engineering & Technology (RUET), a well-known and prestigious public engineering
+        university in Bangladesh.
+        He is an enthusiastic, zealous, and creative individual with an excellent academic background and houses
+        great curiosity for learning and discovering new things.
+        <br>
+        </br>
+        He has a keen research interest. From the beginning of his undergraduate life, he has been continuously
+        working with renowned instructors and industry leaders to hone his skills.
+        Some of his co-authored research articles have been published in renowned international peer-reviewed
+        journals.
+        <br>
+        </br>
+        He houses an admirable personality and is highly praised by his teachers and batchmates.
+      </div>
+
+    </div>
+
+    <div id="pro-jects" class="separator">Projects</div>
+    <div id="projects" class="projects-grid">
+      <a href="https://codepen.io/mdarshadulislam/pen/bGPoVPR" target="_blank" class="project">
+        <img class="project-image" src="https://i.ibb.co/p2SkBF4/tributepage.png"
+                    alt="project">
+        <p class="project-title project-tile">Tribute Page</p>
+      </a>
+      <a href="https://codepen.io/mdarshadulislam/pen/OJexyeW" target="_blank" class="project">
+        <img class="project-image"
+                    src="https://i.ibb.co/4tHM86W/technical-documentation.png"
+                    alt="project">
+        <p class="project-title">Technical Documentation</p>
+      </a>
+      <a href="https://codepen.io/mdarshadulislam/pen/oNrGjrv" target="_blank" class="project">
+        <img class="project-image" src="https://i.ibb.co/YQ36dgr/registrationform.png"
+                    alt="project">
+        <p class="project-title">Registration Form</p>
+      </a>
+      <a href="https://codepen.io/mdarshadulislam/pen/ExBwVGG" target="_blank" class="project">
+        <img class="project-image" src="https://i.ibb.co/v3PgBwx/quiz.png"
+                    alt="project">
+        <p class="project-title">Accessibility Quiz</p>
+      </a>
+      <a href="https://codepen.io/mdarshadulislam/pen/xxoXwNe" target="_blank" class="project">
+        <img class="project-image" src="https://i.ibb.co/k6SHDhq/product-landing-page.png"
+                    alt="project">
+        <p class="project-title">Product Landing Page</p>
+      </a>
+      <a href="https://codepen.io/mdarshadulislam/pen/zYVEvQy" target="_blank" class="project">
+        <img class="project-image"
+                    src="https://i.ibb.co/QKqL5GL/photogallery.png" alt="project">
+        <p class="project-title">Photo Gallery</p>
+      </a>
+    </div>
+    <div>
+
+    </div>
+
+    <div id="contact" class="separator">Contact</div>
+
+    <div>
+      <div class="connect">Connect with me.</div>
+      <div class="links">
+        <div class="inline"><a id="profile-link" href="https://github.com/mdarshadulislam" target="_blank">Github</a>
+        </div>
+        <div class="inline"><a id="profile-link" href="https://codepen.io/mdarshadulislam" target="_blank">CodePen</a>
+        </div>
+      </div>
+
+    </div>
+
+    <footer class="separator">Developed by Arshad</footer>
+
+  </main>
+
+
+</body>
+
+</html>
